--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 # postgres://avnadmin:AVNS_zUPihkxPTk5xiINQLnh@pg-e3ce046-tusharkumarshah14394-2e66.k.aivencloud.com:18791/defaultdb?sslmode=require
-DATABASE_URL=""
+DATABASE_URL="postgres://avnadmin:AVNS_zUPihkxPTk5xiINQLnh@pg-e3ce046-tusharkumarshah14394-2e66.k.aivencloud.com:18791/defaultdb?sslmode=require"
